--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 
 apply plugin: 'org.springframework.boot'
 
-group = 'de.bwulfert.voice.consultant'
+group = 'org.owls.voice.application'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
@@ -21,9 +21,6 @@ repositories {
 	mavenCentral()
 	mavenLocal()
 	maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
-	flatDir {
-		dirs 'libs'
-	}
 }
 
 dependencies {
@@ -38,8 +35,6 @@ dependencies {
 	compile group: 'edu.cmu.sphinx', name: 'sphinx4-core', version:'5prealpha-SNAPSHOT'
 	compile group: 'edu.cmu.sphinx', name: 'sphinx4-data', version:'5prealpha-SNAPSHOT'
 	compile files('libs/sphinx4-core-5prealpha-SNAPSHOT.jar', 'libs/sphinx4-data-5prealpha-SNAPSHOT.jar')
-
-	compile fileTree(dir: 'libs', include: '*.jar')
 
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
 
