--- a/webapp/build.gradle
+++ b/webapp/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group = 'de.bwulfert.voice.consultant'
+group = 'org.owls.voice.webapp'
 version '1.0-SNAPSHOT'
 
 
@@ -30,11 +30,10 @@ dependencies {
     compile("org.springframework.boot:spring-boot-devtools")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 
+
 }
 
-/*
-bootJar {
-    baseName = 'de.bwulfert.voice.consultant.webapp'
-    version =  '0.1.0'
+
+springBoot {
+    mainClass = 'org.owls.voice.webapp.WebApplication'
 }
-*/
