--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,60 +1,54 @@
-buildscript {
-    ext {
-        springBootVersion = '1.5.8.RELEASE'
-    }
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    }
-}
-
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'idea'
 apply plugin: 'io.spring.dependency-management'
 
-group = 'org.owls.voice.backend'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
-
-repositories {
-    jcenter()
-    mavenCentral()
-    mavenLocal()
-    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
-    flatDir {
-        dirs 'libs'
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
     }
 }
 
-dependencies {
-    compile('org.springframework.boot:spring-boot-starter-web')
-
-    runtime('com.h2database:h2')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile('org.springframework.security:spring-security-test')
-
-    // for text to speech output
-    compile group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
-    compile group: 'de.dfki.mary', name: 'voice-bits1-hsmm', version: '5.2'
-
-    compile group: 'edu.cmu.sphinx', name: 'sphinx4-core', version:'5prealpha-SNAPSHOT'
-    compile group: 'edu.cmu.sphinx', name: 'sphinx4-data', version:'5prealpha-SNAPSHOT'
-    compile files('libs/sphinx4-core-5prealpha-SNAPSHOT.jar', 'libs/sphinx4-data-5prealpha-SNAPSHOT.jar')
-
-    compile fileTree(dir: 'libs', include: '*.jar')
-
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
-
-
-    compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    testCompile("junit:junit")
-
-    compile "org.projectlombok:lombok:1.14.8"
+configurations.all {
+    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
+    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    exclude group: 'org.springframework.boot', module: 'logback-classic'
 }
 
-bootRepackage {
-    mainClass = 'org.owls.voice.backend.AssistancApplication'
+dependencies {
+    // for source-code generation
+    compile "org.projectlombok:lombok:1.14.8"
+
+    // spring boot initializr
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.springframework.security:spring-security-test')
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile('org.springframework.boot:spring-boot-starter-web')
+
+    // testing
+    testCompile("junit:junit")
+
+    // database implementation
+    runtime('com.h2database:h2')
+
+    // for command line interface parsing
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
+
+    // for text to speech output
+    compile group: 'de.dfki.mary', name: 'marytts-runtime', version: '5.2'
+    compile group: 'de.dfki.mary', name: 'voice-bits1-hsmm', version: '5.2'
+
+    // for speech recoginition
+    compile group: 'edu.cmu.sphinx', name: 'sphinx4-core', version:'5prealpha-SNAPSHOT'
+    compile group: 'edu.cmu.sphinx', name: 'sphinx4-data', version:'5prealpha-SNAPSHOT'
+
+    // for json parson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+
+    /*
+    compile fileTree(dir: 'libs', include: '*.jar')
+    */
 }
