--- a/build.gradle
+++ b/build.gradle
@@ -1,46 +1,24 @@
 buildscript {
-	ext {
-		springBootVersion = '1.5.8.RELEASE'
-	}
 	repositories {
 		mavenCentral()
 	}
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
 	}
 }
 
-/*
-
-apply plugin: 'org.springframework.boot'
-
-group = 'org.owls.voice.application'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
-
-repositories {
-	jcenter()
-	mavenCentral()
-	mavenLocal()
-	maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+subprojects {
+    apply plugin: "java"
+    repositories {
+        jcenter()
+        mavenCentral()
+        mavenLocal()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+        flatDir {
+            dirs 'libs'
+        }
+    }
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+    version = '0.0.1-SNAPSHOT'
 }
-
-dependencies {
-	runtime('com.h2database:h2')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-	testCompile('org.springframework.security:spring-security-test')
-
-	// for text to speech output
-	compile group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
-	compile group: 'de.dfki.mary', name: 'voice-bits1-hsmm', version: '5.2'
-
-	compile group: 'edu.cmu.sphinx', name: 'sphinx4-core', version:'5prealpha-SNAPSHOT'
-	compile group: 'edu.cmu.sphinx', name: 'sphinx4-data', version:'5prealpha-SNAPSHOT'
-	compile files('libs/sphinx4-core-5prealpha-SNAPSHOT.jar', 'libs/sphinx4-data-5prealpha-SNAPSHOT.jar')
-
-	compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
-
-	compile "org.projectlombok:lombok:1.14.8"
-
-}
-*/
