--- a/webapp/build.gradle
+++ b/webapp/build.gradle
@@ -3,13 +3,6 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group = 'org.owls.voice.webapp'
-version '1.0-SNAPSHOT'
-
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
 buildscript {
     repositories {
         mavenCentral()
@@ -19,8 +12,10 @@ buildscript {
     }
 }
 
-repositories {
-    mavenCentral()
+configurations.all {
+    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
+    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    exclude group: 'org.springframework.boot', module: 'logback-classic'
 }
 
 dependencies {
@@ -29,11 +24,4 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("org.springframework.boot:spring-boot-devtools")
     testCompile("org.springframework.boot:spring-boot-starter-test")
-
-
-}
-
-
-springBoot {
-    mainClass = 'org.owls.voice.webapp.WebApplication'
 }
