--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,9 @@
-buildscript {
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
-	}
-}
-
-subprojects {
-    apply plugin: "java"
+allprojects {
     repositories {
         jcenter()
         mavenCentral()
         mavenLocal()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
-        flatDir {
-            dirs 'libs'
-        }
     }
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
-    version = '0.0.1-SNAPSHOT'
 }
+
