--- a/plugins-api/build.gradle
+++ b/plugins-api/build.gradle
@@ -23,13 +23,9 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.0.5.RELEASE'
-
-    // for source-code generation
-    compile "org.projectlombok:lombok:1.14.8"
 }
 
 jar {
-    baseName = 'voice-assistant-plugins'
+    baseName = 'voice-assistant-plugins-api'
     enabled = true
 }
